WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181863
REGRESSION (
r223149
): Ref WebPageProxy objects before calling their functionality
https://bugs.webkit.org/show_bug.cgi?id=181863
Summary
REGRESSION (r223149): Ref WebPageProxy objects before calling their functiona...
Daniel Bates
Reported
2018-01-19 10:10:57 PST
Changeset <
https://trac.webkit.org/changeset/223149/
> (
bug #178102
) inadvertently changed the copying semantics in WebProcessProxy such that we no longer ref WebPageProxy objects before calling their functionality. In
bug #181771
we fixed this inadvertent change made in WebProcessProxy::didClose(). There are more places that
r223149
touched that we need to fix up. It is not safe to loop over WebPageProxy objects calling functionality that may call a delegate because the delegate can do anything including deallocating itself and other WebPageProxy objects.
Attachments
Patch
(3.08 KB, patch)
2018-01-19 10:20 PST
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-01-19 10:11:50 PST
<
rdar://problem/36662452
>
Daniel Bates
Comment 2
2018-01-19 10:20:07 PST
Created
attachment 331748
[details]
Patch
Chris Dumez
Comment 3
2018-01-19 10:21:10 PST
Comment on
attachment 331748
[details]
Patch r=me
Daniel Bates
Comment 4
2018-01-19 11:02:09 PST
Comment on
attachment 331748
[details]
Patch Clearing flags on attachment: 331748 Committed
r227218
: <
https://trac.webkit.org/changeset/227218
>
Daniel Bates
Comment 5
2018-01-19 11:02:10 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug