REGRESSION (r223149): Ref WebPageProxy objects before calling their functionality https://bugs.webkit.org/show_bug.cgi?id=181863 <rdar://problem/36662452>

Reviewed by Chris Dumez.

More fix ups following r223149. When notifying all pages of a process state change we need to
take care to ref all the pages before iterating over them and notifying them of the change.
Notifying a page of such a state change may ultimately delegate to the embedding client. And
the embedding client can do anything, including deallocating one or more pages.

* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::didBecomeUnresponsive):
(WebKit::WebProcessProxy::didBecomeResponsive):
(WebKit::WebProcessProxy::willChangeIsResponsive):
(WebKit::WebProcessProxy::didChangeIsResponsive):
(WebKit::WebProcessProxy::requestTermination):

Canonical link: https://commits.webkit.org/197694@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227218 268f45cc-cd09-0410-ab3c-d52691b4dbfc